<resources>
    <string name="app_name">Harga Pangan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="profile">Profil</string>
    <string name="login">Masuk</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="error_message">Field tidak boleh kosong!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="remember_me">Ingat Saya</string>
    <string name="info_harga_pangan">Info Harga Pangan</string>
    <string name="keluar">Keluar</string>
    <string name="profile_image">Profile Image</string>
    <string name="harga_rata_rata">Harga Rata - Rata</string>
    <string name="harga_tertinggi">Harga Tertinggi</string>
    <string name="harga_terendah">Harga Terendah</string>
    <string name="beras_bengawan">Beras Bengawan</string>
    <string name="hari_ini">Hari Ini</string>
    <string name="pasar">Pasar</string>
    <string name="harga_sekarang">Harga Sekarang</string>
    <string name="harga_kemaren">Harga Kemaren</string>
    <string name="down_arrow">down arrow</string>
    <string name="up_arrow">up arrow</string>
    <string name="send">send</string>
    <string name="harga_rata_rata_komoditas">Harga Rata - Rata Komoditas</string>
    <string name="_7_mei_2019">7 Mei 2019</string>
    <string name="logo">logo</string>
    <string name="mujiburrohman">Mujiburrohman</string>
    <string name="update_harga_pangan">Update Harga Pangan</string>
    <string name="data_komoditas">Data Komoditas</string>
    <string name="data_pasar">Data Pasar</string>
    <string name="nama">nama</string>
    <string name="harga">harga</string>
    <string name="satuan">satuan</string>
    <string name="status">status</string>
    <string name="nama_komoditas">Nama Komoditas</string>
    <string name="rp_10_000">Rp.10.000</string>
    <string name="masukan_harga">Masukan Harga</string>
</resources>
