<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:contentDescription="@string/logo"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/barchart" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:background="@color/silver"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:background="@null"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="18sp"
                android:text="admin"
                android:paddingBottom="5dp"
                android:hint="@string/username"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:background="@color/silver"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@null"
                android:text="infopanganblitar2019"
                android:paddingBottom="5dp"
                android:hint="@string/password"
                android:inputType="textPassword" />


        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/remember_me" />

        <Button
            android:id="@+id/btn_login_1"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:background="@drawable/capsule"
            android:text="@string/login"
            tools:targetApi="m" />
    </LinearLayout>

</android.support.v7.widget.CardView>