<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="161dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="@dimen/padding_10"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:text="@string/mujiburrohman" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:layout_marginTop="100dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/capsule2"
            android:text="@string/keluar" />
    </LinearLayout>

</ScrollView>