<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_margin="1dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:layout_height="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgKomoditas"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/logo"
            android:padding="20dp"
            app:srcCompat="@drawable/help" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10"
            android:paddingTop="@dimen/padding_10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNamaKomoditas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/nama_komoditas" />

            <TextView
                android:id="@+id/tvHargaKomoditas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/rp_10_000" />
            <TextView
                android:id="@+id/tvUpdateAt"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>