<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.detailInfoPangan.DetailInfoPangan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" >
            <TextView
                android:id="@+id/namKOmDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beras_bengawan"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                android:textAlignment="center"/>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/padding_10"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="@dimen/padding_10"
                        android:paddingEnd="@dimen/padding_10">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/harga_rata_rata"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="53dp"
                            android:paddingEnd="0dp"
                            android:text="@string/harga_tertinggi"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="53dp"
                            android:paddingEnd="0dp"
                            android:text="@string/harga_terendah"
                            android:textSize="10sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="@dimen/padding_10"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:contentDescription="@string/send"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="30dp"
                            app:srcCompat="@drawable/rowdoble" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="66dp"
                            android:contentDescription="@string/up_arrow"
                            android:layout_marginTop="30dp"
                            app:srcCompat="@drawable/uparrow" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="65dp"
                            android:layout_marginTop="30dp"
                            android:contentDescription="@string/down_arrow"
                            app:srcCompat="@drawable/downarrow" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="@dimen/padding_10"
                            android:paddingEnd="55dp">

                            <TextView
                                android:id="@+id/tv_harga_hari_ini_sekarang"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/tv_detail_hargaRata"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textAlignment="center"
                                android:textSize="12sp" />

                        </LinearLayout>



                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/padding_10"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_harga_pasar_pakem"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/tv_detail_hargaTertinggi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textAlignment="center"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingStart="40dp"
                            android:paddingEnd="5dp">

                            <TextView
                                android:id="@+id/tv_harga_terndah"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/tv_detail_hargaTerendah"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textAlignment="center"
                                android:textSize="12sp" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tv_tanggal_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hari_ini"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:padding="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:text="@string/pasar"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:text="@string/harga_sekarang"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/harga_kemaren"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_detail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </LinearLayout>

</ScrollView>