<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv1"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginBottom="10dp"
    android:layout_margin="1dp"
    card_view:cardCornerRadius="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardElevation="7dp">

    <RelativeLayout
        android:id="@+id/rlitem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_success">

        <ImageView
            android:id="@+id/ivGambar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:padding="3dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvnama"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/ivGambar"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/nama"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llharga"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tvnama"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tcRupiah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toLeftOf="@+id/tvharga"
                android:gravity="center|bottom"
                android:text="Rp. "
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvharga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/harga"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvsatuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/satuan"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llstatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llharga"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivstatus"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|bottom"
                android:layout_marginEnd="5dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tvstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center|bottom"
                android:text="@string/status"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>