<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.dashboard.DashboardFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:layout_margin="@dimen/padding_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="170dp"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:background="@color/white"
                    android:layout_height="150dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_info"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginStart="50dp"
                        android:src="@drawable/help" />

                    <TextView
                        android:id="@+id/tv_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:layout_marginEnd="@dimen/padding_10"
                        android:gravity="center_horizontal"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:text="@string/info_harga_pangan" />

                </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="170sp"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_height="150dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_update_harga"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="40dp"
                            android:layout_marginStart="55dp"
                            android:src="@drawable/reload" />

                        <TextView
                            android:id="@+id/tv_update_harga"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:padding="10dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="0dp"
                            android:text="@string/update_harga_pangan"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_10"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="170dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_height="150dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_komoditas"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="55dp"
                        android:src="@drawable/folder" />

                    <TextView
                        android:id="@+id/tv_data_komoditas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center_horizontal"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:text="@string/data_komoditas" />

                </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="170dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_height="150dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_pasar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/data_pasar"
                        android:layout_marginStart="55dp"
                        android:src="@drawable/profit" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/data_pasar"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>